<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:columnCount="2"
    android:rowCount="3"
    tools:background="@color/black">

    <ImageView
        android:id="@+id/iv_easy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_row="0"
        android:layout_column="0"
        android:adjustViewBounds="true"
        android:contentDescription="@string/easy_mode_icon" />

    <TextView
        android:id="@+id/tv_easy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="1"
        android:layout_gravity="center"
        style="@style/TextViewBaseStyle"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:padding="2dp"
        tools:text="00:54" />

    <ImageView
        android:id="@+id/iv_medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_row="1"
        android:layout_column="0"
        android:adjustViewBounds="true"
        android:contentDescription="@string/medium_difficulty_mode_icon" />

    <TextView
        android:id="@+id/tv_medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="1"
        style="@style/TextViewBaseStyle"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:padding="2dp"
        android:layout_gravity="center"
        tools:text="01:02" />

    <ImageView
        android:id="@+id/iv_hard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_row="2"
        android:layout_column="0"
        android:adjustViewBounds="true"
        android:contentDescription="@string/hard_difficulty_mode_icon" />

    <TextView
        android:id="@+id/tv_hard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="1"
        style="@style/TextViewBaseStyle"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:padding="2dp"
        android:layout_gravity="center"
        tools:text="--:--" />

</GridLayout>