<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="clickListener"
            type="android.view.View.OnClickListener" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.MainScreenActivity">

        <FrameLayout
            android:id="@+id/frame_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <ImageView
            android:id="@+id/btn_settings"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@drawable/drawable_btn_settings"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:adjustViewBounds="true"
            android:onClick="@{clickListener}"
            app:layout_constraintWidth_percent="0.2"
            android:stateListAnimator="@animator/btn_selector_pressed"
            android:contentDescription="@string/settings_button" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.05" />

        <ImageView
            android:id="@+id/btn_vstack"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/drawable_btn_vstack"
            app:layout_constraintBottom_toTopOf="@+id/btn_start_resume"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/guide_top"
            app:layout_constraintVertical_chainStyle="spread"
            app:layout_constraintWidth_percent="0.8"
            android:contentDescription="@string/game_name_image" />

        <com.softramen.buttons.BiImageView
            android:id="@+id/btn_start_resume"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:onClick="@{clickListener}"
            app:text_image="@drawable/lbl_start"
            app:text_image_height_percent="@dimen/label_height_pct"
            android:src="@drawable/btn_green_round_background"
            android:stateListAnimator="@animator/btn_selector_pressed"
            app:layout_constraintBottom_toTopOf="@+id/btn_levels"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_vstack"
            app:layout_constraintVertical_chainStyle="spread"
            app:layout_constraintWidth_percent="@dimen/btn_green_width_pct"
            android:contentDescription="@string/button_game_start" />

        <com.softramen.buttons.BiImageView
            android:id="@+id/btn_levels"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="@{clickListener}"
            app:text_image="@drawable/lbl_levels"
            app:text_image_height_percent="@dimen/label_height_pct"
            android:adjustViewBounds="true"
            android:src="@drawable/btn_green_round_background"
            android:stateListAnimator="@animator/btn_selector_pressed"
            app:layout_constraintTop_toBottomOf="@+id/btn_start_resume"
            app:layout_constraintBottom_toTopOf="@+id/btn_difficulty"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintVertical_chainStyle="spread"
            app:layout_constraintWidth_percent="@dimen/btn_green_width_pct"
            android:contentDescription="@string/button_go_to_level_selector" />

        <com.softramen.buttons.BiImageView
            android:id="@+id/btn_difficulty"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:onClick="@{clickListener}"
            app:text_image="@drawable/lbl_easy"
            app:text_image_height_percent="@dimen/label_height_pct"
            android:src="@drawable/btn_green_round_background"
            android:stateListAnimator="@animator/btn_selector_pressed"
            app:layout_constraintTop_toBottomOf="@+id/btn_levels"
            app:layout_constraintBottom_toBottomOf="@id/guide_bottom"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintVertical_chainStyle="spread"
            app:layout_constraintWidth_percent="@dimen/btn_green_width_pct"
            android:contentDescription="@string/button_change_difficulty_mode" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.85" />

        <include
            layout="@layout/admob_banner_others"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>