<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="clickListener"
            type="android.view.View.OnClickListener" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.LevelSelectorActivity">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_line_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_line_right"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.96" />

        <com.softramen.backgroundViews.StarsView
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/button_back_to_main_screen"
            android:onClick="@{clickListener}"
            android:scaleType="fitCenter"
            android:src="@drawable/drawable_btn_red_prev"
            android:stateListAnimator="@animator/btn_selector_pressed"
            app:layout_constraintBottom_toTopOf="@+id/guide_line_top"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_world_num"
            style="@style/TextViewBaseStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="2dp"
            android:paddingTop="5dp"
            android:paddingBottom="2dp"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@id/tv_world_name"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            tools:text="WORLD 1" />

        <TextView
            android:id="@+id/tv_world_name"
            style="@style/TextViewBaseStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="2dp"
            android:paddingTop="2dp"
            android:paddingBottom="5dp"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@id/guide_line_top"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_world_num"
            app:layout_constraintVertical_chainStyle="packed"
            tools:text="Red City" />

        <View
            android:id="@+id/btn_world_num_name"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="?android:attr/selectableItemBackground"
            android:onClick="@{clickListener}"
            app:layout_constraintBottom_toBottomOf="@+id/tv_world_name"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_world_num"
            app:layout_constraintWidth_percent="0.45"
            android:contentDescription="@string/button_world_selector" />

        <ImageView
            android:id="@+id/iv_remaining_totems"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginEnd="2dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/remaining_totems"
            android:padding="6dp"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="@+id/tv_remaining_totems"
            app:layout_constraintRight_toLeftOf="@id/tv_remaining_totems"
            app:layout_constraintTop_toTopOf="@id/tv_remaining_totems"
            tools:src="@mipmap/ic_icon_foreground" />

        <TextView
            android:id="@+id/tv_remaining_totems"
            style="@style/TextViewBaseStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="22sp"
            app:layout_constraintBottom_toTopOf="@+id/guide_line_top"
            app:layout_constraintRight_toRightOf="@id/guide_line_right"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="x3" />

        <View
            android:id="@+id/area_remaining_totems"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_remaining_totems"
            app:layout_constraintLeft_toLeftOf="@+id/iv_remaining_totems"
            app:layout_constraintRight_toLeftOf="@id/guide_line_right"
            app:layout_constraintTop_toTopOf="@+id/tv_remaining_totems"
            tools:background="#A0FFFFFF" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guide_line_top" />

        <ImageView
            android:id="@+id/btn_prev"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/button_prev_page"
            android:stateListAnimator="@animator/btn_selector_pressed"
            android:onClick="@{clickListener}"
            android:src="@drawable/drawable_btn_prev"
            app:layout_constraintBottom_toTopOf="@+id/ad_view"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guide_line_top"
            app:layout_constraintWidth_percent="0.18" />

        <ImageView
            android:id="@+id/btn_next"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/button_next_page"
            android:onClick="@{clickListener}"
            android:src="@drawable/drawable_btn_next"
            android:stateListAnimator="@animator/btn_selector_pressed"
            app:layout_constraintBottom_toTopOf="@+id/ad_view"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guide_line_top"
            app:layout_constraintWidth_percent="0.18" />

        <TextView
            android:id="@+id/tv_toast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/drawable_toast_background"
            android:padding="15dp"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:visibility="gone"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <include
            layout="@layout/admob_banner_others"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>